rewrite the figures

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,8 @@
 !Cayley.pdf
 !spsk.pdf
 !spsklk.pdf
+!compare_effects_exact1.pdf
+!compare_effects_exact2.pdf
+!compare_effects_optimum.pdf
 MANC.pdf
 tmp.*
